--- a/iitb/letters/toilet_repair/main.tex
+++ b/iitb/letters/toilet_repair/main.tex
@@ -12,14 +12,12 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Packages: Custom Packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{article}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \begin{document}
 
@@ -39,13 +37,13 @@
 \noindent{}Dear Sir,
 \vspace{2ex}
 
-\noindent{}I am a PhD scholar, residing in MRSB/Manas Building, Flat 605. Recently, pigeons tripped a clay pot in the toilet which has broken off a significant portion of the toilet seat.I have attached the image for the same.
+\noindent{}I am a PhD scholar, residing in MRSB/Manas Building, Flat 605. Recently, pigeons tripped a clay pot in the toilet which has broken off a chunk of the toilet seat. The image of which is attached.
 \vspace{2ex}
 
-\noindent{}I had reaised a complaint request through the support portal immediately. On survey, they suggested to write this letter to you.
+\noindent{}I had raised a complaint request through the support portal immediately. On survey, they suggested to write this letter to you.
 \vspace{2ex}
 
-\noindent{}I am deeply sorry for the delay in the initiation of this letter. I have my APS this month.
+\noindent{}There has been a delay in writing this letter as this is my APS month.
 \vspace{2ex}
 
 \vspace{8ex}
